--- a/back-end/vercel.json
+++ b/back-end/vercel.json
@@ -14,7 +14,10 @@
   "routes": [
     {
       "src": "/(.*)",
-      "dest": "/"
+      "dest": "/",
+      "headers": {
+        "Access-Control-Allow-Origin": "*"
+      }
     }
   ]
 }
